--- a/My Portfolio/myportfolio.html
+++ b/My Portfolio/myportfolio.html
@@ -60,7 +60,7 @@
 	
 
 	<p class="intro">
-		<font>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>Quisque volutpat lacus nibh,id consequat ante ullamcorper sed.Aliquam<br>idvarius ipsum.Sed consequat bibendum sapien at condimentum.<br>Aliquam id varius ipsum. Sed consequat bibendum sapien at condimentum.</font>
+		<font>Problem solving is my favorite game, learning new things is my passion<br>and to challenge myself is my hobby. I'm an aspiring artist who's so much in love<br>with art and an adventure hunter, as a "people person" I can easily interact with<br>others and using these skills and positive attitude I can able to make things better.</font>
 	</p>
 		
 	<h4>Web Developer</h4>
@@ -213,7 +213,7 @@
 		
 		<div class="monologist">
 			<a href="https://desss91.github.io/b3nc-pineda-lourdes/csp1/"> 
-			<img src="image/tatak.png" width="600"></a>
+			<img src="image/monologist.jpg" width="600"></a>
  		</div>
 
  		<div class="tatak">
