--- a/csp1/index.html
+++ b/csp1/index.html
@@ -10,6 +10,12 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
+	<!-- font googlefont -->
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
+
+
 </head>
 
 <body bgcolor="#434446">
@@ -39,60 +45,12 @@
 	<div id="bannerpage"
 	 class="banner">
 		<div id="titlepage" class="title">
+			<h1 class="monologist">Monologist</h1>
 			<h3 class="qoute">
 				<font color="white">The Journey of a lifetime starts with the turning of a page.</font>
 			<h3>
 		</div>
 	</div>
-	
-	
-
-	<!-- log in area -->
-	<div class="login">
-
-		<h2 class="in"><font color="black">Sign In</font></h2>
-		
-		<h2 class="user">Username</h2>
-		<textarea class="username"></textarea>
-		
-		<h2 class="pass">Password</h2>
-		<textarea class="password"></textarea>
-		<button class="btn"><h3 class="submit">Submit</h3></button>
-
-	</div>
-
-
-	<!-- Sign up area-->
-	<div class="signup">
-		<h2 class="up"><font color="black">Sign Up</font></h2>
-		
-		<h2 class="firstname">First Name</h2>
-		<textarea class="first"></textarea>
-		
-		<h2 class="lastname">Last Name</h2>
-		<textarea class="last"></textarea>
-		
-		<h2 class="username2">Username</h2>
-		<textarea class="user2"></textarea>
-
-		<h2 class="email">Email Address</h2>
-		<textarea class="email2"></textarea>
-
-		<button class="btn2"><h3 class="create">Create Account</h3></button>
-		
-	</div>
-
-	<!-- list of best selling book from famous authors -->
-	<h2 class="best"><font color="white">Best Selling Books</h2>
-	
-	<div class="book1">
-		<img class="b1" src="image/book01.jpg">
-	</div>
-	
-	<div class="book2">
-		<img class="b2" src="image/book02.jpg">
-	</div>
-	
 	
 
 	<h2 class="top">
