--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,9 @@
 
     <!-- fonts googleapis -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+    
   </head>
 
   <body id="page-top">
@@ -218,7 +220,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/monologist.jpg" alt="">
+              <img class="img-fluid" src="img/monologist.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -333,8 +335,8 @@
           <div class="col-md-4">
           </div>
 
-          <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light" href="#">
+          <div class="text-center mt-4" >
+            <a class="btn btn-xl btn-outline-light" id="download" href="LourdesPineda.pdf" download>
               <i class="fa fa-download mr-2"></i>
               Download CV
             </a>
@@ -346,7 +348,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Lourdes Pineda 2018</small>
+        <small>&copy; Ma.Lourdes Pineda 2018</small>
       </div>
     </div>
 
