--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -197,6 +199,15 @@
       <div class="skill2">
         <div class="skill_level" style="width: 40%"></div>
       </div>
+    </div>
+
+    
+    <div class="skillbox">
+      <p>Troubleshoot</p>
+      <div class="skill2">
+        <div class="skill_level" style="width: 80%"></div>
+      </div>
+
 
     </div>
   </div>
@@ -336,7 +347,7 @@
           </div>
 
           <div class="text-center mt-4" >
-            <a class="btn btn-xl btn-outline-light" id="download" href="LourdesPineda.pdf" download>
+            <a class="btn btn-xl btn-outline-light" id="download" href="LourdesPinedaCV.pdf" download>
               <i class="fa fa-download mr-2"></i>
               Download CV
             </a>
@@ -372,8 +383,8 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Monologist</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/monologist.jpg" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam. <br><a href="https://desss91.github.io/lourdespineda/csp1/index.html">see project</a></p>
+              <img class="img-fluid mb-5" src="img/monologist.png" alt="">
+              <p class="mb-5">My first capstone project inspired by wattpad, The idea of this website is best for a book lover, professional and aspiring writer. This community allows you to have an update on the new release and best-selling book, you can have your freedom to write and share your own stories or poem in different genres. For educational purpose, this project is static only.<br><a href="https://despineda.github.io/lourdespineda/csp1/index.html">see project</a></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -395,7 +406,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Tatak</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/tatak.png" alt="">
-              <p class="mb-5">TATAK! tagalog word for brand or print, it means "to have some print on my shirt!", also funny and unique way to easily remember the brand of our tee-shirt. sell all types of printed shirts including hugot lines and other designs that has a unique style. <br><a href="https://tatakcom.000webhostapp.com/">see project</a></p>
+              <p class="mb-5">My second capstone project, TATAK! is an online tee-shirt store which you can browse and choose any shirt design, you can easily buy online by registering to our website. Built using HTML, CSS, PHP, JavaScript, and MariaDB. <br><a href="https://tatakcom.000webhostapp.com/">see project</a></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -417,7 +428,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Explorer</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/explorer.png" alt="">
-              <p class="mb-5">A social media specifically for travel blog where you can share photos and experience of you adventure.
+              <p class="mb-5">My third capstone project, A social media specifically for travel blog where you can write about what you have experienced during your trip and share photos.
               <br><a href="https://explorerblog2018.000webhostapp.com/">see project</a></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
